1st week Day 1 Done

--- a/FindAgent/index.html
+++ b/FindAgent/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Basic template</title>
+  <title>Find An Agent</title>
+  <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
 </head>
 <body>
-Hello World!
-<h1>WOW</h1>
+  <section class="hero">
+    <header>
+      <img src="images/logo.png" alt="logo">
+      <ul>
+        <li>Agents</li>
+        <li>Login</li>
+        <li>Signup</li>
+      </ul>
+    </header>
+    <h1>Relax, Finding an Agent Just so easy.</h1>
+    <h2>Receive proposal from best agent for free</h2>
+    <form action="">
+      <input type="text" placeholder="Enter a suburb"/><input type="button" value="Search" />
+    </form>
+  </section>
 </body>
 </html>
