--- a/FindAgent/index.html
+++ b/FindAgent/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Find An Agent</title>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="stylesheets/styles.css">
 </head>
 <body>
