--- a/FindAgent/index.html
+++ b/FindAgent/index.html
@@ -21,5 +21,25 @@
       <input type="text" placeholder="Enter a suburb"/><input type="button" value="Search" />
     </form>
   </section>
+  <section class="numbers">
+    <ul>
+      <li class="number">
+        <h2>20,000</h2>
+        <h3>Agents</h3>
+      </li>
+      <li class="number">
+        <h2>1,723,000</h2>
+        <h3>Transactions</h3>
+      </li>
+      <li class="number">
+        <h2>17,444</h2>
+        <h3>Agencies</h3>
+      </li>
+      <li class="number">
+        <h2>10,200</h2>
+        <h3>Suburbs</h3>
+      </li>
+    </ul>
+  </section>
 </body>
 </html>
