--- a/FindAgent/index.html
+++ b/FindAgent/index.html
@@ -41,5 +41,40 @@
       </li>
     </ul>
   </section>
+  <section class="how-it-works">
+    <h2>How it works</h2>
+    <ul>
+      <li>
+        <div class="detail">
+          <span class="number">1</span>
+          <i class="icon-list"></i>
+          <h3>Compare</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="detail">
+          <span class="number">2</span>
+          <i class="icon-pencil"></i>
+          <h3>Receive Proposals</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </li>
+      <li>
+        <div class="detail">
+          <span class="number">3</span>
+          <i class="icon-users"></i>
+          <h3>Sell with the Best</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div>
+      </li>
+    </ul>
+  </section>
 </body>
 </html>
